<resources>
    <string name="app_name">YourAppName</string>
    <string name="entry">Вход</string>
    <string name="email">Email</string>
    <string name="main_button_text">Войти</string>
    <string name="no_account_register">Нету аккаунта? Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="vk_button_text">ВК</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_hint">Введите пароль</string>
    <string name="password">Пароль</string>
    <string name="vk">Vk</string>
    <string name="dk">Одноклассники</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>