<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragment.EntryFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/entry_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/entry"
        android:textColor="@color/text_color"
        android:textSize="28sp"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintStart_toStartOf="@+id/guideline_16_dp_start"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/entry_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/email"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline_16_dp_start"
        app:layout_constraintTop_toBottomOf="@+id/entry_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_16_dp_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_16_dp_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_rounded_bg"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toStartOf="@+id/guideline_16_dp_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_16_dp_start"
        app:layout_constraintTop_toBottomOf="@+id/entry_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline_16_dp_start"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_rounded_bg"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toStartOf="@+id/guideline_16_dp_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_16_dp_start"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/main_button_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline_16_dp_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_16_dp_start"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_account_register"
        android:textSize="12sp"
        app:fontFamily="@font/roboto_semibold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_16_dp_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_16_dp_start"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textSize="12sp"
        app:fontFamily="@font/roboto_semibold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_16_dp_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_16_dp_start"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#4D555E"
        app:layout_constraintEnd_toStartOf="@+id/guideline_16_dp_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_16_dp_start"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/button_vk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_rounded_vk"
        android:contentDescription="@string/vk"
        android:src="@drawable/vk"
        app:layout_constraintEnd_toStartOf="@+id/button_od"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/guideline_16_dp_start"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <ImageButton
        android:id="@+id/button_od"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/gradient_background"
        android:contentDescription="@string/dk"
        android:src="@drawable/icon_od"
        app:layout_constraintBottom_toBottomOf="@+id/button_vk"
        app:layout_constraintEnd_toStartOf="@+id/guideline_16_dp_end"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button_vk"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>
